--- a/Open-Source Panel/.htaccess
+++ b/Open-Source Panel/.htaccess
@@ -1,4 +1,4 @@
 Options -Indexes
 
-ErrorDocument 404 https://panel.elfbar-security.eu/
-ErrorDocument 403 https://panel.elfbar-security.eu/
+ErrorDocument 404 https://github.com/flowzilla/Elfbar-Security-FiveM-Anticheat
+ErrorDocument 403 https://github.com/flowzilla/Elfbar-Security-FiveM-Anticheat
